ATT o site para o evento de Fortaleza 2023

--- a/build_production/about/index.html
+++ b/build_production/about/index.html
@@ -258,7 +258,7 @@
             <div>
               <span class="icon-room text-white h2 d-block"></span>
               <h2>Onde</h2>
-              <p class="mb-0">SEBRAE - Natal/RN</p>
+              <p class="mb-0">Fortaleza/CE</p>
             </div>
           </div>
           <div class="col-md-4 text-center">
