--- a/build_production/index.html
+++ b/build_production/index.html
@@ -186,7 +186,7 @@ setTimeout(function() {
                 os preços dos ingressos o mais baixo possível. Dessa
                 forma, fazer um evento mais acessível.
             </p>
-            <a href="http://bit.ly/2GIYBdJ" target="_blank" class="btn btn-primary px-4 py-2">Saiba mais em nossa apresentação</a>
+            <a href="/assets/images/midia/Midia_Kit_Completo_PT_BR.pdf" target="_blank" class="btn btn-primary px-4 py-2">Saiba mais em nossa apresentação</a>
           </div>
         </div>
       </div>
