--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </h1>
           <div class="row center text-brown">
             <h3 class="header col s12 light">A maior conferência de PHP do Nordeste!</h3>
-            <h4 class="header col s12 light">6, 7 e 8 de outubro de 2023</h4>
+            <h4 class="header col s12 light">6, 7 de outubro de 2023</h4>
             <h5 class="header col s12 light">Fortaleza - Ceará</h5>
             <br><br>
           </div>
