atualiza local do evento

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <h3 class="center brown-text">LOCAL</h3>
             <br><br>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127380.79914988465!2d-38.66181726355335!3d-3.8849889609358117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c745fe9c03245d%3A0xd435fd5a6bfbbe44!2sUNIFOR%20-%20Universidade%20de%20Fortaleza!5e0!3m2!1spt-BR!2sbr!4v1680637731103!5m2!1spt-BR!2sbr"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.2105978354243!2d-38.489193725746894!3d-3.764292043354288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c748aa1e0708f5%3A0xcacc52aee90b0cc4!2sCentro%20Universit%C3%A1rio%20Est%C3%A1cio%20%7C%20Via%20Corpvs!5e0!3m2!1spt-BR!2sbr!4v1689697300032!5m2!1spt-BR!2sbr"
               width="100%" height="450" style="border:0;border-radius: 5px;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
             <br><br>
@@ -232,7 +232,7 @@
 
         <div class="row">
           <div class="col s12 m12 center">
-            <h5 class="center">UNIFOR | Av. Washington Soares, 1321 - Edson Queiroz, Fortaleza - CE</h4>
+            <h5 class="center">ESTÁCIO VIA CORPVS | R. Eliseu Uchôa Beco, 600 - Guararapes, Fortaleza - CE</h4>
               <br>
               <p class="light flow-text" style="text-align: center; font-size: 23px;">
                 Informações sobre quais auditórios serão usados em breve!
