add botão comprar ingressos

--- a/index.html
+++ b/index.html
@@ -325,12 +325,12 @@
             <br><br>
             <h3 class="center brown-text">INGRESSOS</h3>
             <br><br>
-            <h4 class="center">Foi mal ai deizano! mas ainda não temos ingressos disponíveis a venda, teremos em breve!
+            <h4 class="center">Falai jovi caso queira comprar teu ingresso e dos teus amigos é só clicar no botão abaixo!
             </h4>
-            <img class="responsive-img" src="images/cordel/ingressos.webp" 
-            title="Figura no formato de literatura de cordel homen no balcão da budega (comercio no nordeste) antiga esperando os clientes"
-            alt="Figura no formato de literatura de cordel homen no balcão da budega (comercio no nordeste) antiga esperando os clientes"
-            />
+            <br>
+            <a href="https://www.sympla.com.br/evento/phpeste-2023-fortaleza-ce/2055893" target="_blank" title="Clique aqui para comprar o seu ingresso"
+              class="btn-large waves-effect waves-light brown darken-2 scrollSuave"> Comprar ingresso!</a>
+              <br><br>
           </div>
         </div>
       </div>
@@ -452,7 +452,8 @@
             <ul class="collapsible">
               <li>
                 <div class="collapsible-header">1 - Como faço para me inscrever no evento?</div>
-                <div class="collapsible-body"><span> Inscrições estarão disponíveis em agosto de 2023</span></div>
+                <div class="collapsible-body"><span> Basta clicar aqui ->  <a href="https://www.sympla.com.br/evento/phpeste-2023-fortaleza-ce/2055893" target="_blank" title="Clique aqui para comprar o seu ingresso"
+                  class="btn-large waves-effect waves-light brown darken-2 scrollSuave"> Comprar ingresso!</a></span></div>
               </li>
               <li>
                 <div class="collapsible-header">2 - Quem pode participar do evento?</div>
