adiciona logo das comunidades

--- a/index.html
+++ b/index.html
@@ -143,20 +143,27 @@
           </div>
           <div class="col s12 m4">
             <div class="icon-block">
+              <img class="responsive-img" title="Logomarca da comunidade Arretadas PHP com Rapadura do Estado do Ceará"
+                alt="Logomarca da comunidade PHP com Rapadura do Estado do Ceará"
+                src="images/comunidades/arretadas-php.webp" />
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
               <img class="responsive-img" title="Logomarca da comunidade PHP RN do Estado do Rio Grande do Norte"
                 alt="Logomarca da comunidade PHP RN do Estado do Rio Grande do Norte"
                 src="images/comunidades/php-rn.webp" />
             </div>
           </div>
+        </div>
+
+        <div class="row">
           <div class="col s12 m4">
             <div class="icon-block">
               <img class="responsive-img" title="Logomarca da comunidade PHP PE do Estado do Pernanbuco"
                 alt="Logomarca da comunidade PHP PE do Estado do Pernanbuco" src="images/comunidades/php-pe.webp" />
             </div>
           </div>
-        </div>
-
-        <div class="row">
           <div class="col s12 m4">
             <div class="icon-block">
               <img class="responsive-img" title="Logomarca da comunidade PHP MA do Estado do Maranhão"
@@ -169,19 +176,18 @@
                 alt="Logomarca da comunidade PHP BA do Estado da Bahia" src="images/comunidades/php-ba.webp" />
             </div>
           </div>
+        </div>
+
+        <div class="row">
           <div class="col s12 m4">
             <div class="icon-block">
               <img class="responsive-img" title="Logomarca da comunidade PHP PB do Estado da Paraíba"
                 alt="Logomarca da comunidade PHP PB do Estado da Paraíba" src="images/comunidades/php-pb.webp" />
             </div>
           </div>
-        </div>
-
-        <div class="row">
           <div class="col s12 m4">
             <div class="icon-block">
-              <img class="responsive-img" title="Logomarca da comunidade PHP SP do Estado de São Paulo"
-                alt="Logomarca da comunidade PHP SP do Estado de São Paulo" src="images/comunidades/php-sp.webp" />
+              <img class="responsive-img" src="images/comunidades/onde-codar.webp" />
             </div>
           </div>
           <div class="col s12 m4">
@@ -191,13 +197,27 @@
                 src="images/comunidades/php-rs.webp" />
             </div>
           </div>
+        </div>
+        <div class="row">
           <div class="col s12 m4">
             <div class="icon-block">
-              <img class="responsive-img" src="images/comunidades/onde-codar.webp" />
+              <img class="responsive-img" title="Logomarca da comunidade PHP SP do Estado de São Paulo"
+                alt="Logomarca da comunidade PHP SP do Estado de São Paulo" src="images/comunidades/php-sp.webp" />
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <img class="responsive-img" title="Logomarca da Comunidade Github Fortaleza"
+              alt="Logomarca da Comunidade Github Fortaleza" src="images/comunidades/github-fortaleza.webp" />
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <img class="responsive-img" title="Logomarca da Comunidade Vale Livre da região Vale do Jaguaribe"
+                alt="Logomarca da Comunidade Vale Livre da região Vale do Jaguaribe" src="images/comunidades/vale-livre.webp" />
             </div>
           </div>
         </div>
-
       </div>
     </div>
 
@@ -232,7 +252,9 @@
 
         <div class="row">
           <div class="col s12 m12 center">
-            <h5 class="center">ESTÁCIO VIA CORPVS | R. Eliseu Uchôa Beco, 600 Guararapes, Fortaleza - CE</h4>
+            <img class="responsive-img" style="width: 10rem;" title="Logomarca da Estacio Via Corpvs"
+            alt="Logomarca da Estacio Via Corpvs" src="images/estacio.webp" />
+            <h5 class="center">ESTÁCIO VIA CORPVS | R. Eliseu Uchôa Beco, 600 Guararapes, Fortaleza - CE</h5>
               <br>
               <p class="light flow-text" style="text-align: center; font-size: 23px;">
                 Informações sobre quais auditórios serão usados em breve!
