adiciona logo das comunidades

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
         <div class="row">
           <div class="col s12 m4">
             <div class="icon-block">
-              <img class="responsive-img" title="Logomarca da comunidade PHP PB do Estado da Paraíba"
-                alt="Logomarca da comunidade PHP PB do Estado da Paraíba" src="images/comunidades/php-pb.webp" />
+              <img class="responsive-img" title="Logomarca da comunidade PHP SP do Estado de São Paulo"
+                alt="Logomarca da comunidade PHP SP do Estado de São Paulo" src="images/comunidades/php-sp.webp" />
             </div>
           </div>
           <div class="col s12 m4">
@@ -201,20 +201,40 @@
         <div class="row">
           <div class="col s12 m4">
             <div class="icon-block">
-              <img class="responsive-img" title="Logomarca da comunidade PHP SP do Estado de São Paulo"
-                alt="Logomarca da comunidade PHP SP do Estado de São Paulo" src="images/comunidades/php-sp.webp" />
+              <img class="responsive-img" title="Logomarca da comunidade PHP PB do Estado da Paraíba"
+                alt="Logomarca da comunidade PHP PB do Estado da Paraíba" src="images/comunidades/php-pb.webp" />
             </div>
           </div>
           <div class="col s12 m4">
             <div class="icon-block">
-              <img class="responsive-img" title="Logomarca da Comunidade Github Fortaleza"
-              alt="Logomarca da Comunidade Github Fortaleza" src="images/comunidades/github-fortaleza.webp" />
+              <img class="responsive-img" title="Logomarca da Comunidade PHP do Estado do Rio de Janeiro"
+              alt="Logomarca da Comunidade PHP do Estado do Rio de Janeiro" src="images/comunidades/php-rio.webp" />
             </div>
           </div>
           <div class="col s12 m4">
             <div class="icon-block">
               <img class="responsive-img" title="Logomarca da Comunidade Vale Livre da região Vale do Jaguaribe"
                 alt="Logomarca da Comunidade Vale Livre da região Vale do Jaguaribe" src="images/comunidades/vale-livre.webp" />
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <img class="responsive-img" title="Logomarca da comunidade Frontend Ceará"
+                alt="Logomarca da comunidade Frontend Ceará" src="images/comunidades/front-ce.webp" />
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <img class="responsive-img" title="Logomarca da Comunidade Poti Livre"
+              alt="Logomarca da Comunidade Poti Livre" src="images/comunidades/poti-livre.webp" />
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <img class="responsive-img" title="Logomarca da Comunidade Github Fortaleza"
+                alt="Logomarca da Comunidade Github Fortaleza" src="images/comunidades/github-fortaleza.webp" />
             </div>
           </div>
         </div>
@@ -574,3 +594,4 @@
 </script>
 
 </html>
+ 
