adiciona section do keynote

--- a/index.html
+++ b/index.html
@@ -249,11 +249,34 @@
           </div>
         </div>
       </div>
-      <div class="parallax"><img src="images/parallax-slider/background-natal.webp"
+      <div class="parallax">
+        <img src="images/parallax-slider/background-natal.webp"
           title="Foto da edição de 2022 em Natal no Rio Grande do Norte"
-          alt="Foto da edição de 2022 em Natal no Rio Grande do Norte"></div>
+          alt="Foto da edição de 2022 em Natal no Rio Grande do Norte">
+      </div>
     </div>
 
+    <div class="row">
+      <br><br>
+      <h3 class="center brown-text" style="margin-bottom: 3rem;">O KEYNOTE DA VEZ!</h3>
+      <br><br>
+      <div class="col s6 m5 center">
+        <img style="width: 19rem; margin-left: 10rem; border-radius: 2rem" src="images/Leticia-Coelho.webp" alt="">
+      </div>
+      <div class="col s6 m6">
+        <div class="icon-block center"  style="margin-bottom: 5rem;">
+          <h4>Leticia Coelho</h4>
+          <h6><span>Florianópolis - Brasil</span></h6>
+          <br>
+          <h5 class="center">Engenheira de Software, criadora de conteúdo, mentora, escritora, palestrante.</h5>
+          <p class="light flow-text" style="text-align: justify; font-size: 20px;">Engenheira de Software por atuação e Engenheira de telecomunicações por formação. Trabalho ativamente nas comunidades tech, divulgando e criando conteúdos simplificados para facilitar e incentivar a entrada de novos integrantes para a área como Engenheira Coelho.
+            Palestrante, escritora, mentora, criadora de conteúdo, administradora de comunidades voltadas a inclusão de mulheres e pessoas com deficiência. Isso tudo, porque eu realmente acredito que um bom futuro depende de tecnologia e educação.</p>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+    
     <div class="container">
       <div class="section" id="local">
 
