--- a/index.html
+++ b/index.html
@@ -502,11 +502,8 @@
         <div class="row">
           <div class="col s12 m12 center">
             <br><br>
-            <h3><a class="brown-text waves-effect modal-trigger" style="text-decoration: underline;" href="#modal">CÓDIGO DE CONDUTA</a></h3>
-            <div id="modal" class="modal modal-fixed-footer">
-              <div class="modal-content">
-                <h5>CÓDIGO DE CONDUTA</h5>
-                <p class="light flow-text" style="text-align: justify; font-size: 1rem; line-height: 2rem;">
+            <h3><a class="brown-text waves-effect modal-trigger">CÓDIGO DE CONDUTA</a></h3>
+                <p class="light flow-text" style="text-align: justify; font-size: 23px;">
                   A Conferência PHPeste está comprometida a ser livre de discriminação para todos, independente de gênero,
                   identidade e expressão de gênero, orientação sexual, deficiência, aparência física, raça, idade, origem ou
                   religião. Não será tolerado, sob nenhuma circunstância, o constrangimento de participantes em eventos e
@@ -544,10 +541,6 @@
                   <br>
     
                   Créditos e fonte original: PHPSP
-              </div>
-              <div class="modal-footer">
-                <a href="#!" class="modal-close waves-effect btn-flat">Fechar</a>
-              </div>
             </div>
           </div>
         </div>
@@ -559,7 +552,7 @@
       <div class="section" id="faq">
 
         <div class="row">
-          <div class="col s12 m12 center">
+          <div class="col s12 m12">
             <br><br>
             <h3 class="center brown-text">Perguntas frequentes (FAQ)</h3>
             <br>
