add section patrocinadores

--- a/index.html
+++ b/index.html
@@ -462,6 +462,94 @@
             <br><br>
             <h3 class="center brown-text">PATROCINADORES</h3>
             <br><br>
+            <h4 class="center">Conheça nossos parceiros, empresas que ajudam a PHPeste acontececer.</h4>
+            <br><br>
+            <div class="row">
+                <div class="col s12 m12 center hoverable p-3" id="card-sponsor">
+                    <h5><span class="span-speaker">Patrocinador Ouro</span></h5>
+                    <br>
+                    <img 
+                        class="responsive-img" 
+                        title="Logomarca da sua empresa aqui"
+                        alt="Logomarca da sua empresa aqui" 
+                        src="" 
+                        width="80%"
+                        />
+                    <div class="col l12 s12 brown-text" style="margin-top: 30px; margin-bottom: 30px;">
+                      <a target="_blank" style="margin-right: 50px;" href="https://instagram.com/sua_empresa_aqui">Instagram</a>
+                      <a target="_blank" href="https://sua_empresa_aqui.com.br">Website</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col s12 m6 center hoverable p-3" id="card-sponsor">
+                  <h6><span class="span-sponsor-silver">Patrocinador Prata</span></h6>
+                  <br>
+                  <img 
+                      class="responsive-img" 
+                      title="Logomarca da sua empresa aqui"
+                      alt="Logomarca da sua empresa aqui" 
+                      src="" 
+                      width="80%"
+                      />
+                  <div class="col l12 s12 brown-text" style="margin-top: 30px; margin-bottom: 30px;">
+                    <a target="_blank" style="margin-right: 50px;" href="https://instagram.com/sua_empresa_aqui">Instagram</a>
+                    <a target="_blank" href="https://sua_empresa_aqui.com.br">Website</a>
+                  </div>
+              </div>
+
+              <div class="col s12 m6 center hoverable p-3" id="card-sponsor">
+                <h6><span class="span-sponsor-silver">Patrocinador Prata</span></h6>
+                <br>
+                <img 
+                    class="responsive-img" 
+                    title="Logomarca da sua empresa aqui"
+                    alt="Logomarca da sua empresa aqui" 
+                    src="" 
+                    width="80%"
+                    />
+                <div class="col l12 s12 brown-text" style="margin-top: 30px; margin-bottom: 30px;">
+                  <a target="_blank" style="margin-right: 50px;" href="https://instagram.com/sua_empresa_aqui">Instagram</a>
+                  <a target="_blank" href="https://sua_empresa_aqui.com.br">Website</a>
+                </div>
+            </div>
+          </div>
+            <div class="row">
+                  <!--Patrocinio bronze-->
+                  <div class="col s12 m4 center hoverable p-3" id="card-sponsor">
+                      <h6><span class="span-speaker-default">Patrocinador Bronze</span></h6>
+                      <br>
+                      <img 
+                          class="responsive-img" 
+                          title="Logomarca da Me2 Softwares"
+                          alt="Logomarca da Me2 Softwares" 
+                          src="images/sponsors/me2.webp" 
+                          width="80%"
+                          />
+                      <div class="col l12 s12 brown-text" style="margin-top: 30px; margin-bottom: 30px;">
+                        <a target="_blank" style="margin-right: 50px;" href="https://instagram.com/me2softwares">Instagram</a>
+                        <a target="_blank" href="https://me2.com.br">Website</a>
+                      </div>
+                  </div>
+
+                  <!--Patrocinio apoio institucional-->
+                  <div class="col s12 m4 center hoverable p-3" id="card-sponsor">
+                      <h6><span class="span-speaker-default">Apoio Institucional</span></h6>
+                      <br>
+                      <img 
+                          class="responsive-img" 
+                          title="Logomarca da Centro Universitário Estácio | Via Corpvs"
+                          alt="Logomarca da Centro Universitário Estácio | Via Corpvs" 
+                          src="images/estacio.webp" 
+                          width="50%"
+                          />
+                      <div class="col l12 s12 brown-text" style="margin-top: 30px; margin-bottom: 30px;">
+                        <a target="_blank" style="margin-right: 50px;" href="https://instagram.com/tecnologiaviacorpvs?igshid=MzRlODBiNWFlZA==">Instagram</a>
+                        <a target="_blank" href="https://estacio.br">Website</a>
+                      </div>
+                  </div>
+            </div>
+            <br><br>
             <h4 class="center">Por que apoiar a PHPeste?</h4>
             <br><br>
             <p class="light flow-text" style="text-align: justify; font-size: 23px;">
@@ -556,7 +644,7 @@
             <br><br>
             <h3 class="center brown-text">Perguntas frequentes (FAQ)</h3>
             <br>
-            <ul class="collapsible">
+            <ul class="collapsible" style="font-size: 23px;">
               <li>
                 <div class="collapsible-header">1 - Como faço para me inscrever no evento?</div>
                 <div class="collapsible-body"><span> Basta clicar aqui ->  <a href="https://www.sympla.com.br/evento/phpeste-2023-fortaleza-ce/2055893" target="_blank" title="Clique aqui para comprar o seu ingresso"
