adiciona modal para o codigo de conduta

--- a/index.html
+++ b/index.html
@@ -500,14 +500,19 @@
           alt="Foto da edição de 2016 em Salvador no estado da Bahia."></div>
     </div>
 
+    <br><br>
+
     <div class="container">
       <div class="section" id="code-of-conduct">
-
         <div class="row">
           <div class="col s12 m12 center">
             <br><br>
-            <h3><a class="brown-text waves-effect modal-trigger">CÓDIGO DE CONDUTA</a></h3>
-                <p class="light flow-text" style="text-align: justify; font-size: 23px;">
+
+            <a class="waves-effect waves-light btn modal-trigger btn-large brown darken-2" href="#modal1">CÓDIGO DE CONDUTA</a>
+            <div id="modal1" class="modal modal-fixed-footer">
+              <div class="modal-content">
+                <h4>CÓDIGO DE CONDUTA</h4>
+                <p class="light flow-text" style="text-align: justify; font-size: 18px;">
                   A Conferência PHPeste está comprometida a ser livre de discriminação para todos, independente de gênero,
                   identidade e expressão de gênero, orientação sexual, deficiência, aparência física, raça, idade, origem ou
                   religião. Não será tolerado, sob nenhuma circunstância, o constrangimento de participantes em eventos e
@@ -545,10 +550,14 @@
                   <br>
     
                   Créditos e fonte original: PHPSP
+              </div>
+              <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Aceitar</a>
+              </div>
+            </div>
             </div>
           </div>
         </div>
-
       </div>
     </div>
 
@@ -558,7 +567,7 @@
         <div class="row">
           <div class="col s12 m12">
             <br><br>
-            <h3 class="center brown-text">Perguntas frequentes (FAQ)</h3>
+            <h3 class="center brown-text">PERGUNTAS FREQUENTES (FAQ)</h3>
             <br>
             <ul class="collapsible">
               <li>
