alterações nas paginas index e agenda

--- a/index.html
+++ b/index.html
@@ -401,16 +401,12 @@
             <br><br>
             <h3 class="center brown-text">PROGRAMAÇÃO</h3>
             <br><br>
-            <h4 class="center">Sacalme! em breve divulgaremos os horários de todas as palestras e oficinas (workshops).
-            </h4>
+            <h4 class="center">Veja a programação completa aqui</h4>
             <br><br>
             <a href="agenda.html" target="_blank" title="Clique aqui para acessar a programação"
             class="btn-large waves-effect waves-light brown darken-2 scrollSuave"> acesse a programação</a>
             <br><br>
-            <img class="responsive-img" src="images/cordel/programacao.webp" 
-              title="Figura no formato de literatura de cordel homen de pé apontando pro desperator cuco antigo e mulher no computador navegando na internet"
-              alt="Figura no formato de literatura de cordel homen de pé apontando pro desperator cuco antigo e mulher no computador navegando na internet"
-              />
+            
           </div>
         </div>
 
@@ -588,19 +584,13 @@
           alt="Foto da edição de 2016 em Salvador no estado da Bahia."></div>
     </div>
 
-    <br><br>
-
     <div class="container">
       <div class="section" id="code-of-conduct">
         <div class="row">
           <div class="col s12 m12 center">
             <br><br>
-
-            <a class="waves-effect waves-light btn modal-trigger btn-large brown darken-2" href="#modal1">CÓDIGO DE CONDUTA</a>
-            <div id="modal1" class="modal modal-fixed-footer">
-              <div class="modal-content">
-                <h4>CÓDIGO DE CONDUTA</h4>
-                <p class="light flow-text" style="text-align: justify; font-size: 18px;">
+            <h3><a class="brown-text waves-effect modal-trigger">CÓDIGO DE CONDUTA</a></h3>
+                <p class="light flow-text" style="text-align: justify; font-size: 23px;">
                   A Conferência PHPeste está comprometida a ser livre de discriminação para todos, independente de gênero,
                   identidade e expressão de gênero, orientação sexual, deficiência, aparência física, raça, idade, origem ou
                   religião. Não será tolerado, sob nenhuma circunstância, o constrangimento de participantes em eventos e
@@ -638,14 +628,10 @@
                   <br>
     
                   Créditos e fonte original: PHPSP
-              </div>
-              <div class="modal-footer">
-                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Aceitar</a>
-              </div>
-            </div>
             </div>
           </div>
         </div>
+
       </div>
     </div>
 
@@ -655,7 +641,7 @@
         <div class="row">
           <div class="col s12 m12">
             <br><br>
-            <h3 class="center brown-text">PERGUNTAS FREQUENTES (FAQ)</h3>
+            <h3 class="center brown-text">Perguntas frequentes (FAQ)</h3>
             <br>
             <ul class="collapsible" style="font-size: 23px;">
               <li>
