Add primeira remessa de palestantes

--- a/index.html
+++ b/index.html
@@ -334,45 +334,60 @@
             <br>
 
             <div class="row">
-              <div class="col s12 m6 center hoverable" id="card-speaker">
-                <div class="col s12 m6">
-                  <h4>Palestrante 1</h4>
-                  <h6>Caixa-prega - CE.</h6>
-                  <br>
-                  <img src="images/speakers/avatar-masc.webp"
-                    title="Palestrante 1"
-                    alt="Palestrante 1"
+
+              <div class="col s12 m3 center hoverable" id="card-speaker">
+                <div class="col s12 m12">
+                  <img src="images/speakers/DaianeAlves.webp"
+                    title="Foto da palestrante arretada Daiane Alves"
+                    alt="Foto da palestrante arretada Daiane Alves"
                     width="80%"
                     id="img-speakers"
                     >
-                    <h6><span class="span-speaker-default">Palestrante invocado</span></h6>
-                </div>
-                <div class="col s12 m6">
-                  <br>
-                  <h6>Programador réi desenrolado da gota.</h6>
-                  <p class="light flow-text" style="text-align: justify; font-size: 13px; line-height: 2rem;">Caba mais desenrolado que esse eu não conheço é muita catigoria pra uma pessoa só, em breve vamos divulgar todos os palestrantes mas sacalme meu fi e minha fia.</p>
+                    <h5><span class="span-speaker-default">Daiane Alves</span></h5>
+                    <h6>Rio de Janeiro - RJ</h6>
                 </div>
               </div>
 
-              <div class="col s12 m6 center hoverable" id="card-speaker">
-                <div class="col s12 m6">
-                  <h5>Palestrante 2</h5>
-                  <h6>Brenhas - CE</h6>
-                  <br>
-                  <img src="images/speakers/avatar-fem.webp"
-                    title="Palestrante 1"
-                    alt="Palestrante 1"
+              <div class="col s12 m3 center hoverable" id="card-speaker">
+                <div class="col s12 m12">
+                  <img src="images/speakers/ViniciusCampitelli.webp"
+                    title="Foto do palestrante invocado Vinicius Campitelli"
+                    alt="Foto do palestrante invocado Vinicius Campitelli"
                     width="80%"
                     id="img-speakers"
                     >
-                    <h6><span class="span-speaker-default">Palestrante joiada</span></h6>
-                </div>
-                <div class="col s12 m6">
-                  <br>
-                  <h6>Maior autarquia do mundo das IAs.</h6>
-                  <p class="light flow-text" style="text-align: justify; font-size: 13px; line-height: 2rem;">Inteligência é com ela mesmo, em breve vamos divulgar todos os palestrantes mas sacalme meu fi e minha fia.</p>
+                    <h5><span class="span-speaker-default">Vinicius Campitelli</span></h5>
+                    <h6>São Paulo - SP</h6>
                 </div>
               </div>
+
+
+              <div class="col s12 m3 center hoverable" id="card-speaker">
+                <div class="col s12 m12">
+                  <img src="images/speakers/RosanaMarques.webp"
+                    title="Foto da palestrante roxeda Rosana Marques"
+                    alt="Foto da palestrante roxeda Rosana Marques"
+                    width="80%"
+                    id="img-speakers"
+                    >
+                    <h5><span class="span-speaker-default">Rosana Marques</span></h5>
+                    <h6>Fortaleza - CE</h6>
+                </div>
+              </div>
+
+              <div class="col s12 m3 center hoverable" id="card-speaker">
+                <div class="col s12 m12">
+                  <img src="images/speakers/EvaldoBarbosa.webp"
+                    title="Foto do palestrante desenrolado Evaldo Barbosa"
+                    alt="Foto do palestrante desenrolado Evaldo Barbosa"
+                    width="80%"
+                    id="img-speakers"
+                    >
+                    <h5><span class="span-speaker-default">Evaldo Barbosa</span></h5>
+                    <h6>São Luíz - MA</h6>
+                </div>
+              </div>
+
 
 
             </div>
